# restaraunt

./: .dockerignore  .gitignore
backend/: .gitignore  Dockerfile  README.md  docker-compose.yaml.template  docker-compose.yml  pyproject.toml  real-docker-compose.yaml
backend/Docker-build/web/: Dockerfile  nginx.conf
backend/fastapi-application/: .env-template  .env.template  main.py  prestart.sh  testConDB.py
backend/fastapi-application/alembic/: env.py
backend/fastapi-application/alembic/versions/: 2025_06_12_1357-5423c52de4f4_create_tables_users_tokens.py  2025_06_15_1529-ce6454f9ff7d_create_tables_categories_product_.py  2025_06_16_1403-8e136f43f957_add_soft_delete_mixin.py  2025_06_25_1509-d5acc98b3d0a_add_tables_cart_items_cart_items_.py  2025_06_26_0437-c1dae6f3ef8a_add_order_tables.py  2026_06_02_0001_add_applied_modifiers_to_order_items.py  2026_06_05_0001_add_promotions_table.py  2026_06_05_0002_add_note_to_status_history.py  2026_06_05_0003_add_modifier_image.py  2026_06_12_0001_add_is_birthday_to_promotions.py  2026_06_12_0002_widen_order_customer_phone.py  2026_06_12_0003_add_review_response.py  2026_06_13_0001_add_favorite_groups.py  2026_06_16_0001_backfill_is_combo_components.py
backend/fastapi-application/api/: __init__.py
backend/fastapi-application/api/admin/: __init__.py
backend/fastapi-application/api/api_v1/: __init__.py
backend/fastapi-application/auth/: README.md  utils.py
backend/fastapi-application/core/: config.py  db_helper.py  orders_ws.py
backend/fastapi-application/scripts/: products_data.sql  seed_data.py
(+321 files in other folders)
