[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = {extras = ["standart"], version = "^0.34.2"}
pydantic = {extras = ["email"], version = "^2.11.4"}
pydantic-settings = "^2.9.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
orjson = "^3.10.18"
alembic = "^1.15.2"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.3.0"
aiosmtplib = "^4.0.1"
python-multipart = "^0.0.20"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.0"


